Bug 802143 - Fix calculation of content bounds in ReusableTileStoreOGL. r=bgirard

FrameMetrics changed at some point so that the content rect and scroll offset
are stored pre-multiplied by the render resolution. The display-port calculation
in this function appears to have always been wrong(?)